# platform_bionic

./: CMakeLists.txt  README.rst
libc/: CMakeLists.txt
libc/bionic/: dlmalloc.h  libc_init_common.cpp  libc_init_static.cpp  mystubs.cpp
libc/private/: KernelArgumentBlock.h
libc/tzcode/: localtime.c  private.h  strftime.c
libm/: CMakeLists.txt
